<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Map Chat</string>
    <string name="auth_subtitle">Регистрация и вход для локального чата с картой OpenStreetMap.</string>
    <string name="register_title">Регистрация</string>
    <string name="login_title">Вход</string>
    <string name="hint_name">Имя</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="login_button">Войти</string>
    <string name="logout">Выйти</string>
    <string name="send">Отправить</string>
    <string name="hint_message">Введите сообщение</string>
    <string name="fill_all_fields">Заполните все поля.</string>
    <string name="login_already_exists">Пользователь с таким логином уже существует.</string>
    <string name="registration_success">Регистрация выполнена. Открываю чат.</string>
    <string name="invalid_credentials">Неверный логин или пароль.</string>
    <string name="empty_message">Сообщение не должно быть пустым.</string>
    <string name="current_user_template">Пользователь: %1$s</string>
    <string name="auth_error">Ошибка авторизации после регистрации.</string>
</resources>
